apps/lab/resources/css/common.css
:-moz-any-link:focus {
    outline: none;
}

body, body.sc-theme, .sc-theme .sc-pane.sc-main {
  background: #65120E;
}

@font-face {
  font-family: 'Cochin';
  src: static_url('fonts/CochinLTStd.otf');
}
@font-face {
  font-family: 'Rather Unfortunate';
  src: static_url('fonts/RatherUnfortunate.ttf');
}

.sc-theme .sc-pane .rather-unfortunate {
  font-family: 'Rather Unfortunate', 'Lucida Sans', 'Lucida-Grande', sans-serif;
}

.sc-theme .sc-pane .cochin, .tk-scrivano {
  font-family: 'Cochin', 'Lucida Sans', 'Lucida-Grande', sans-serif;
  font-style: oblique;
  font-weight: normal;
}

.sc-theme .sc-pane .sofadi {
  font-family: 'Sofadi One', 'Lucida Sans', 'Lucida-Grande', sans-serif;
  font-weight: 400;
}

.sc-theme .sc-view.title {
  font-family: 'Cochin', 'Lucida Sans', 'Lucida-Grande', sans-serif;
  font-style: oblique;
  font-weight: normal;
}

#content {
    background-repeat: no-repeat;
    position: absolute;
    left: 0px;
    top: 0px;
    right: 0px;
    bottom: 0px;
}

.mainPane {
  overflow-x: hidden;
  overflow-y: auto;]
}

.sc-view.sc-pane.lab {
  background: top center no-repeat static_url('lab_background.jpg');
}


.hover, .active {
    cursor: pointer;
    cursor: hand;
    /*border: thin solid #FF0000;*/
    text-decoration: underline;
    /*background-color: #00FFFF;*/
}

.spinner-icon-48 {
  width:48px;
  height:48px;
  background:no-repeat static_url('spinner.gif') left top;
}

.centered-block {
  display: block;
  margin-left: auto;
  margin-right: auto
}

.sc-pane.sc-panel.frameless { z-index: auto; }
.sc-pane.sc-panel.frameless img { background-color: transparent; }

.black-text {
  color: #000000;
}

.overflowVis {
  overflow: visible;
}

#ending1 {
  position: absolute;
  top: 476px;
  right: 33px;
  width: 167px;
  height: 66px;
  cursor: pointer;
}

#ending2 {
  position: absolute;
  top: 549px;
  right: 33px;
  width: 167px;
  height: 66px;
  cursor: pointer;
}

#ending3 {
  position: absolute;
  top: 622px;
  right: 33px;
  width: 167px;
  height: 66px;
  cursor: pointer;
}

.sc-view {
  overflow: visible;
}

/** QTIP ***/

.qtip {
  opacity: 0.7;
}

.qtip-wrapper {
  -moz-box-shadow: 0px 0px 8px 4px rgba(247, 247, 247, 0.27);
  -webkit-box-shadow: 0px 0px 8px 4px rgba(247, 247, 247, 0.27);
  box-shadow: 0px 0px 8px 4px rgba(247, 247, 247, 0.27);
}

.qtip-content {
  color: #FFFFFF;
  background: rgb(0,0,0);
  background: -moz-linear-gradient(top,  rgb(0,0,0) 0%, rgb(119,119,119) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(0,0,0)), color-stop(100%,rgb(119,119,119)));
  background: -webkit-linear-gradient(top,  rgb(0,0,0) 0%,rgb(119,119,119) 100%);
  background: -o-linear-gradient(top,  rgb(0,0,0) 0%,rgb(119,119,119) 100%);
  background: -ms-linear-gradient(top,  rgb(0,0,0) 0%,rgb(119,119,119) 100%);
  background: linear-gradient(to bottom,  rgb(0,0,0) 0%,rgb(119,119,119) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#777777',GradientType=0 );
}

